--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@emailjs/browser": "^3.12.1",
     "@react-three/drei": "^9.99.4",
     "@react-three/fiber": "^8.15.16",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^9.0.7",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.212",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.6",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-toastify": "^4.0.2",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
